# boards

./: .env  .gitignore  README.md  ckoutput.txt  debug_threads_output.txt  dkoutput.txt  example.env  logs.txt  main.py  nkoutput.txt  pyproject.toml  requirements.txt  review.md  thread_output.txt
accounts/: urls.py  views.py
accounts/static/: login.css  profile.css  signup.css
accounts/static/UAV-OSD-Sans-Mono/: example.html
accounts/templates/registration/: login.html  profile.html  signup.html
config/: settings.py  urls.py
threads/: forms.py  models.py  test_threads.py  urls.py  views.py
threads/management/commands/: clearunmappedimages.py  scrape.py
threads/migrations/: 0001_initial.py  0002_alter_thread_options_and_more.py  0003_alter_thread_post_date.py  0004_alter_savedthread_thread.py  0005_alter_thread_designer.py  0006_alter_thread_currency.py  0007_uploadedimage.py  0008_alter_thread_currency_alter_thread_item_type_and_more.py
threads/scraping/: __init__.py  base.py  ckscraper.py  dkscraper.py  expressions.py  ghscraper.py  helpers.py  manager.py  nkscraper.py  test_gh.py  test_helpers.py  vendors.json
threads/static/: base.css  compose.css  detail.css  home.css  wishlist.css
threads/templates/: base.html  compose.html  detail.html  home.html  wishlist.html
threads/templates/partials/: filter_buttons.html  home_response.html  image_form.html  status_buttons.html  thread_list.html  wishlist_list.html
